<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@android:color/transparent"
        android:title="@string/home" />
    <item
        android:id="@+id/historyFragment"
        android:icon="@android:color/transparent"
        android:title="@string/history" />
    <item
        android:id="@+id/placeholder"
        android:title=""
        android:enabled="false" />
    <item
        android:id="@+id/accountFragment"
        android:icon="@android:color/transparent"
        android:title="@string/account" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@android:color/transparent"
        android:title="@string/profile_title" />
</menu>