<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_tab_general"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/general"
        android:textColor="@color/tabSelectedColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_tab_expense"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tab_expense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/expense"
        android:textColor="@color/colorOnSurfaceVariant"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_tab_income"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/tv_tab_general"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tab_income"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/income"
        android:textColor="@color/colorOnSurfaceVariant"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/tv_tab_expense"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_tab_indicator"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:background="@color/tabSelectedColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_tab_general"
        app:layout_constraintStart_toStartOf="@+id/tv_tab_general"
        app:layout_constraintTop_toBottomOf="@+id/tv_tab_general"
        app:layout_constraintWidth_percent="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>