<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_splash_header"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="-48dp"
        app:cardCornerRadius="48dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_splash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/splash_img"
            android:layout_marginTop="48dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_horizontal_margin"
        android:layout_marginTop="32dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/splash_app_desc"
        android:textColor="@color/colorOnSurface"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_splash_header" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_horizontal_margin"
        android:layout_marginTop="16dp"
        android:text="@string/splash_app_benefit"
        android:textColor="@color/colorOnSurfaceVariant"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="@dimen/card_horizontal_margin"
        android:layout_marginBottom="48dp"
        android:background="@drawable/bg_card_gradient"
        android:text="@string/splash_continue"
        android:textAllCaps="false"
        android:textColor="@color/colorOnPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>